jsb_build/v8impl/JSApi.h



V8_EXPORT int __JSB_Init();


V8_EXPORT JSValue JSB_DupValue(JSContext* ctx, JSValue val);


V8_EXPORT void JSB_FreeValue(JSContext* ctx, JSValue val);


V8_EXPORT void JSB_FreeValueRT(JSRuntime* rt, JSValue val);


V8_EXPORT JSClassID JSB_NewClass(JSRuntime* rt, JSClassID class_id, const char* class_name, JSGCObjectFinalizer* finalizer);